--- a/site/pom.xml
+++ b/site/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.example</groupId>
-    <artifactId>myhippoproject</artifactId>
+    <groupId>net.tirasa</groupId>
+    <artifactId>hipposso</artifactId>
     <version>1.01.00-SNAPSHOT</version>
   </parent>
 
-  <name>My Hippo Project site</name>
-  <description>My Hippo Project Site</description>
-  <artifactId>myhippoproject-site</artifactId>
+  <name>Hippo SSO site</name>
+  <description>Hippo SSO Site</description>
+  <artifactId>hipposso-site</artifactId>
   <packaging>war</packaging>
 
   <dependencies>
