--- a/cms/pom.xml
+++ b/cms/pom.xml
@@ -67,9 +67,9 @@
     </dependency>
     
     <dependency>
-      <groupId>cas</groupId>
-      <artifactId>casclient</artifactId>
-      <version>2.1.1</version>
+      <groupId>org.jasig.cas</groupId>
+      <artifactId>cas-client-core</artifactId>
+      <version>3.1.10</version>
     </dependency>
     
     <!--  Gallery picker dependency -->
